--- a/web/app/themes/sleepmaker/style.css
+++ b/web/app/themes/sleepmaker/style.css
@@ -657,3 +657,13 @@ nav .header-nav__drop-nav {
 .product-card-img img{
     width: 100%;
 }
+.stuff-card-tile{
+    align-items: stretch;
+}
+.stuff-card .bttn{
+    min-width: 206px;
+}
+.stuff-card{
+    display: flex;
+    flex-direction: column;
+}
